--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 <body>
 
 	<h1>Hello World</h1>
+	<div class="img"><img src="img/JS.png" alt=""></div>
 
 
 	<script src="js/main.min.js"></script>
